# civilizationalmetamaterials

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COLLABORATION.md  CONTRIBUTING.md  LICENSE-CODE  LICENSE-CONTENT  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: errata.md  replication.md
.github/workflows/: build-paper.yml  figures.yml  pages.yml  tests.yml
code/: README.md  pyproject.toml  requirements.txt
code/cm/: __init__.py  anisotropy.py  branching.py  constitutive.py  plotting.py  sensitivity.py
code/figures/: _composite.py  fig01_decision_verification_gap.py  fig01_decision_verification_gap.tex  fig02_phase_transition.py  fig03_provenance_taxonomy.py  fig04_freezing_equilibrium.py  fig05_sensitivity_analysis.py  fig06_coordination_anisotropy.py  fig07_trial_design.py  fig08_trust_anchors.py  fig09_metamaterial_analogy.py  fig10_synthetic_principals.py  make_preprint.py
code/tests/: test_anisotropy.py  test_branching.py  test_constitutive.py  test_plotting.py  test_sensitivity.py
docs/: CNAME  index.html
drafts/r1/: civilizational-metamaterials-agi26-r1.tex  references-r1.bib
drafts/r2/: civilizational-metamaterials-agi26-r2.tex  references-r2.bib
experiments/: README.md
experiments/analysis/: primary_endpoint.py  secondary_h2_h4.py  simulate_trial.py
figures/: LAYER_INDEX.md
paper/: Makefile  build.sh  references-r3.bib
peer-review/: author-rebuttal-agi26-r1.md  author-rebuttal-agi26.md  peer-review-agi26-r1.md  peer-review-agi26-r2.md  peer-review-agi26.md
(+13 files in other folders)
