[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "civilizational-metamaterials"
version = "0.1.0"
description = "Reference implementation of the R_eff constitutive law and figure scripts"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "David Orban", email = "david@davidorban.com" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "Pillow>=10.0",
    "SALib>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["cm"]
omit = ["tests/*", "figures/*", "notebooks/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
